fixed body overflow and table scroll

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -574,3 +574,11 @@ table.scrollable-fixed-header {
 }
 
 //html, body { margin: 0; padding: 0; height: 100%; width: 100%;}
+
+.content{
+  max-width: calc(100% - 280px) !important;
+}
+
+body,html{
+  overflow-x: hidden;
+}
